Squashed commit of the following (up to 80d22a):
Scapegoat cleanups
Discount: Remove the option to output tsv files without sequence, since this is not meaningful (especially not when histograms are available)
Remove SegmentOrd type as it was not adding clarity
Cleanups, removed a hack related to HashSegment using segment.data == null to indicate an ambiguous segment
Generator for Index, plus some cleanups of generator names to be singular
Upgrade to Spark 3.3.0 and add --add-exports to Test/javaOptions for Java 17 compatibility
Configure count weighting using integer constants instead of strings, for the sake of performance
Efficiency improvement for ShiftScanner.allMatches
In ReadSplitDemo, highlight minimizers in each read, not just in supermers. Optionally also print k-mers with highlighted minimizers.